@@ -1,4 +1,4 @@
-.TH VIFM 1 "March 19, 2016" "vifm 0.8.1a"
+.TH VIFM 1 "March 20, 2016" "vifm 0.8.1a"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -3151,7 +3151,7 @@ Specifies file name prefixes and suffixes depending on file types.  The format
 is: [{prefix}]:{filetype}:[{suffix}].  Either {prefix} or {suffix} or both of
 them can be omitted (which is the default for all unspecified file types),
 this means empty {prefix} and/or {suffix}.  {prefix} and {suffix} should
-consist exactly of one character. Elements are separated by commas.  Neither
+consist of at most eight character.  Elements are separated by commas.  Neither
 prefixes nor suffixes are part of file names, so they don't affect commands
 which operate on file names in any way. Comma (',') character should not be
 used.  List of file type names can be found in the description of filetype()
