@@ -238,7 +238,8 @@ TEST(files_are_sorted_undecorated)
 {
 	assert_success(chdir(SANDBOX_PATH));
 
-	cfg.decorations[FT_DIR][1][0] = '/';
+	cfg.decorations[FT_DIR][DECORATION_SUFFIX][0] = '/';
+	cfg.decorations[FT_DIR][DECORATION_SUFFIX][1] = '\0';
 
 	lwin.sort[0] = SK_BY_NAME;
 	memset(&lwin.sort[1], SK_NONE, sizeof(lwin.sort) - 1);
